# snake.rs

./: Cargo.toml  README.md
ctrl/: Cargo.toml
ctrl/src/: board.rs  err.rs  full_state.rs  lib.rs  matrix.rs  options.rs
game/: Cargo.toml
game/src/: consts.rs  main.rs  record.rs  timer.rs
game/src/view/: colors.rs  draw_snake.rs  mod.rs  sprites.rs
